# WirtualnySwiat-v2

./: CMakeLists.txt  Ciern.cpp  Ciern.h  Dinozaur.cpp  Dinozaur.h  Guarana.cpp  Guarana.h  Lew.cpp  Lew.h  Organizm.cpp  Organizm.h  Owca.cpp  Owca.h  Queue.cpp  Queue.h  Roslina.cpp  Roslina.h  Swiat.cpp  Swiat.h  Trawa.cpp  Trawa.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h  Zwierze.cpp  Zwierze.h  main.cpp
